--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -217,6 +217,7 @@
   position: relative;
   width: 100%;
   height: 100%;
+  min-height: 500px;
 }
 
 .flashcard-face {
@@ -225,6 +226,9 @@
   height: 100%;
   backface-visibility: hidden;
   border-radius: inherit;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
 
 .flashcard-front {
